--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
 
 /* GLOBAL FONT VARIABLES */
 :root {
-  --asram-font: "Montserrat", sans-serif; /* or whatever T.font.family points to */
+  --asram-font: "Montserrat", sans-serif;
+  /* or whatever T.font.family points to */
   --asram-text-color: #191919;
 }
 
@@ -20,10 +21,13 @@
 
 
 @keyframes logoBreath {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: scale(1);
     opacity: 1;
   }
+
   50% {
     transform: scale(1.06);
     opacity: 0.85;
@@ -35,6 +39,7 @@
     transform: scale(0.85);
     opacity: 0.35;
   }
+
   100% {
     transform: scale(1.2);
     opacity: 0;
@@ -49,3 +54,32 @@
   animation: pingSlow 2.5s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
+/* CUSTOM SCROLLBAR */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #223F7F !important;
+  border-radius: 20px !important;
+  border: 5px solid #f1f1f1 !important;
+  min-height: 250px !important;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  min-height: 250px !important;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #1a3163 !important;
+}
+
+/* Firefox */
+* {
+  /* scrollbar-width: thin; */
+  scrollbar-color: #223F7F #f1f1f1;
+}
